Fix GitHub logo height on Safari

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,6 +42,7 @@ input, button {
 
 // GitHub link
 .github-icon {
+    height: 18px;
     width: 18px;
 }
 
